# Magick

./: .all-contributorsrc  .dockerignore  .env  .env.example  .eslintignore  .eslintrc.json  .gitignore  .gitmodules  .npmrc  .nxignore  .prettierrc  .seraphrc  .slugignore  CHANGELOG.md  CONTRIBUTORS.txt  Dockerfile  EULA.txt  LICENSE  Procfile  README.md  TODO.md  VERSIONING.md  appspec.yml  babel.config.json  build_notes.md  bun.lockb  cloudbuild.yaml  components.json  compose.yml  docker-compose.yml  env.local  heroku.yml  init.sql  instrument.js  jest.config.ts  jest.preset.js  lerna.json  llm-tools-embedjs-0.0.82.tgz  migrations.json  mydb.sqlite-journal  (+19 more)
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.md
.github/workflows/: cloud-build-trigger.yml  codeql.yml  electron.yml  eslint.yml  npm-publish.yml  ossf.yml  scorecard.yml
.husky/: post-merge  pre-push
.verdaccio/: config.yml
@types/: env.d.ts  openai.d.ts  rete-comment-plugin.d.ts  rete-connection-reroute-plugin.d.ts  weaviate-client.d.ts
@types/rete-context-menu-plugin/: index.d.ts
apps/agent/: .npmignore  (+10 more)
apps/agent-2/: jest.config.ts  nitro.config.ts  project.json  tsconfig.json
apps/agent-connector/: Dockerfile  agent-load-test.yml  jest.config.ts  project.json  tsconfig.app.json
apps/agent-server/: jest.config.ts  project.json  tsconfig.app.json  tsconfig.spec.json  webpack.config.js
bruno-requests/: Create Release.bru  Get Agents.bru  Get All Agents.bru  Get An Agents.bru  Get One Agent.bru  bruno.json
config/: .env.local.example  config-db.js  config-plugins.js  config-project.js  custom-environment-variables.json  default.json  plugins.example.js  plugins.json  project.example.js
docs/: CONTRIBUTORS.txt  eventTaxonomy.md  grimoire-framework-design.md  how_to_run_magick_on_popos.md  how_to_run_magick_on_windows.md
files/: TODO.md
grimoire/: README.md  build.config.ts  old.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
lib/: constants.ts  vector0.dylib
notes/: deployment_steps.md  email-server.md  model-notes.md  monorepo-refactor.md  ot-notes.md  refactor-notes.md  runner-notes.md  workspace.md
plugins/: index.ts
scripts/: .env.local.example  Dockerfile.base  Dockerfile.connector  Dockerfile.embedder  Dockerfile.manager  Dockerfile.portal  Dockerfile.server  Dockerfile.worker  analyize-metrics.js  application_start.sh  application_stop.sh  before_install.sh  build-server.js  calculateHash.js  check-docker.js  check-install.js  checkEnvUsage.js  clearweaviate.js  config-db.js  config-plugins.js  doc-embed.js  generateClientConfig.js  generateClientConfig.ts  generateNodeSpec.js  generateNodeSpec.ts  init-bucket.ts  list-nodes.js  ngrok.js  ogmeta.js  reprocess-all-doc-embeddings.js  seed_dev.sh  start-server.js  typescript-create-manifest.js  typescript-generate-tests.js  typescript-process-files-backwards.js  typescript-process-files-gpt4.js  typescript-process-files.js
seeders/: default-seeds.js
tools/: tsconfig.generated.json  tsconfig.tools.json
(+2041 files in other folders)
