[tool.poetry]
name = "magick"
version = "0.1.0"
description = "More than just a rabbit in a hat"
authors = ["Your Name  <you@example.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.2"
# litellm = { path = "./pythonPackages/liteLLM", develop = true }
# litellm = { git = "https://github.com/HaruHunab1320/litellm.git", branch="main"}
# setuptools = "^69.0.3"
embedchain = {extras = ["weaviate"], version = "^0.1.65"}
bs4 = "^0.0.2"
# html5lib = "^1.1"
# lxml = "^5.1.0"
litellm = "^1.19.2"

[tool.poetry.dev-dependencies]
#litellm = { path = "./pythonPackages/liteLLM", develop = true }
# litellm = { git = "https://github.com/HaruHunab1320/litellm.git", branch="main"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
